src/main/default/objects/Price_Book_Rule_Action__c/Price_Book_Rule_Action__c.object-meta.xml
<CustomObject>
    <description>These actions are triggered by the criteria on the Rule object for the CPQ module.</description>
    <label>Rule Action</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Rule Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>