src/main/default/objects/Price_Book_Rule_Action__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <formula>Price_Book_Rule__r.Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book</label>
    <type>Text</type>
</CustomField>