src/main/default/objects/Price_Book_Rule_Action__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Price book item linked to the rule action.</inlineHelpText>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipName>Price_Book_Rule_Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>