src/main/default/objects/Price_Book_Rule_Action__c/fields/Price_Book_Item_Catalog_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item_Catalog_Description__c</fullName>
    <formula>Price_Book_Item__r.Catalog_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Item Description</label>
    <type>Text</type>
</CustomField>