src/main/default/objects/Price_Book_Rule_Action__c/fields/Price_Book_Rule__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Rule__c</fullName>
    <inlineHelpText>Rule for which the rule action is used.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>Price_Book_Rule__c</referenceTo>
    <relationshipLabel>Rule Actions</relationshipLabel>
    <relationshipName>Rule_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>