src/main/default/objects/Price_Book_Rule_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Indicates whether the linked price book item is required, recommended, or disallowed for a ticket.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Disallowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>