src/main/default/objects/Price_Book_Rule_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_Book_Rule__c</columns>
    <columns>Price_Book_Item__c</columns>
    <columns>Price_Book_Item_Catalog_Description__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>